--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Protifólio Jander Stival</title>
+    <link href="style.css" type="text/css" rel="stylesheet"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ConfeitaBia</title>
-    <title>ConfeitaBia</title>
 </head>
 
 <body>
+
+   <div class="content"> 
+     <img src="Imagem/Jander Stival Perfil.jpg" class="perfil-img" 
+    <h3 class="profissao">Programador</h3>
+    </div>
   <nav>
     <a href="./index.html">Brown Bear</a>
     <a href="./aboutme.html">About Me</a>
